# org-mcp-demo

./: ACTUAL_RESULTS.md  AIRPLANE_CLIENT_README.md  AIRPLANE_DATA_README.md  DIAGNOSTIC_REPORT.md  MCP_DIAGNOSTICS.md  MCP_DIAGNOSTIC_REPORT.md  MCP_SERVER_SUMMARY.md  MCP_TOOLS_SUMMARY.md  NEO4J_DIAGNOSTIC_REPORT.md  NEO4J_MCP_DIAGNOSTICS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_AIRPLANE_CLIENT.md  README_CLIENT.md  SCHEMA_VISUALIZATION.md  airplane_client.py  demo.py  example_queries.py  example_usage.py  fetch-last-action-logs.sh  neo4j_airplane_client.py  pyproject.toml  requirements.txt  simple_example.py  verify_client.py
.github/agents/: neo4j-demo.agent.md
.github/workflows/: copilot-setup-steps.yml
airplane_client/: README.md  __init__.py  connection.py  exceptions.py  models.py  repository.py
examples/: README.md  demo.py  query_example.py
github-action-logs/: .downloaded_runs  run-19241001435.txt  run-19241010218.txt  run-19241146662.txt  run-19241151763.txt
neo4j_client/: __init__.py  connection.py  exceptions.py  models.py  repository.py
tests/: __init__.py  conftest.py  test_repository.py
